# mcp-assist-memory

./: .env.example  .replit  DECISION-PROTOCOL.md  Makefile  README.md  REUSABILITY.md  SPEC.md  admin_store.py  app.py  config.py  constraints.txt  dashboard.py  main.py  post-merge.sh  pyproject.toml  replit.nix
.agents/: agent_assets_metadata.toml
attached_assets/: Pasted-Deploy-the-coordination-spine-update-PR-7-to-the-runnin_1782434212315.txt  Pasted-You-are-deploying-an-already-built-already-tested-servi_1781914210496.txt  replitagentprompt_1781055262000.md
docs/: CHANGELOG.md  CODEMAP.md  FAIL-CLOSED-WORKSHEET.md  PHASE0_SUBSPEC.md  REPLIT-APPLY-FIXES-PROMPT.md  REPLIT-DEPLOY-PROMPT.md  coord-spine.md  mcp-capabilities.html  memory-curator-build-prompt.md  memory-curator.md  namespace-isolation.md  replit-agent-prompt.md  test-scenario-coordination-spine.md  test-scenario-tools-j586va.md  test-scenario-v2-trust-boundary.md  test-scenario-v3-phase0-1-challenges.md
errors/: __init__.py  catalog.py  suggest.py
migrations/: 0001_init.sql  0002_embeddings.sql  0003_provenance.sql  0004_content_hash.sql  0005_curation.sql  0006_trust_spine.sql  0007_v3_phase1.sql  0008_surface_attribution.sql
scripts/: backfill_artifacts.py  backfill_content_hash.py  backfill_embeddings.py  backfill_provenance.py  diagnose_integrations.py  lock-deps.sh  migrate.py  post_deploy_dispatch.py  smoke_mcp.py
server/: mcp_server.py
storage/: base.py  curator.py  embeddings.py  github_token.py  idempotency.py  phi.py  postgres.py  profiles.py  reconcile.py  redact.py  sanitize.py  screening.py  sha_equiv.py  telemetry.py  versioning.py
tests/: conftest.py  test_artifacts.py  test_auth.py  test_baseline_contract.py  test_blob_durability.py  test_compact_status.py  test_conventions_and_acl.py  test_coord_health.py  test_curator.py  test_curator_status.py  test_dashboard.py  test_debug_capture.py  test_diagnose_integrations.py  test_embeddings.py  test_get_quarantine.py  test_github_token.py  test_handoff.py  test_healthz.py  test_host_origin_guard.py  test_idempotency.py  test_idempotency_fingerprint.py  test_local_evidence.py  test_loud_dedup.py  test_memory.py  test_observability.py  test_observations.py  test_persistence_integrity.py  test_post_deploy_dispatch.py  test_provenance.py  test_provenance_lineage.py  test_read_ergonomics.py  test_reconcile.py  test_reconnect.py  test_redact.py  test_role_recording.py  test_round_trip.py  test_sanitize.py  (+14 more)
(+38 files in other folders)
