[project]
name = "mcp-assist-memory"
version = "0.1.0"
description = "Shared memory, session, handoff, and artifact MCP server for cross-surface Claude workflows"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.9",
    "starlette>=0.37",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/assist_memory"]
