[project]
name = "mcp-assist-memory"
version = "0.1.0"
description = "Generic, project-agnostic shared memory / coordination / artifact MCP server over Streamable HTTP (Postgres + pgvector). Tier 1 — no domain terms."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    # PINNED: fastmcp 3.4.3 added HostOriginGuardMiddleware which rejects any
    # request whose Host is not in DEFAULT_HOSTS with a bare 421 "Misdirected
    # Request" (and any browser Origin not allowed with 403 "Forbidden Origin").
    # We now RUN that guard for defense-in-depth, configured with the deployment
    # domain(s) in allowed_hosts and the claude.ai connector in allowed_origins
    # (see app.py / config.mcp_allowed_hosts). Pin fastmcp+mcp to verified-good
    # versions so the deploy build matches dev and the guard behavior is stable;
    # an unpinned build would drift and could change the guard's defaults.
    "fastmcp==3.4.3",
    "mcp==1.28.1",
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    "pydantic-settings>=2.4",
    "structlog>=24.1",
    "httpx>=0.27",          # VoyageEmbedder (Phase 3) calls the embeddings REST API
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "anyio>=4.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Top-level service modules (app.py, config.py, admin_store.py, dashboard.py) are
# imported from the repo root (editable install / `uvicorn app:app`); the
# packaged code is the reusable storage + server tiers.
packages = ["server", "storage"]
